app/assets/stylesheets/pages/title.css.sass
@import 'base'
@import 'sassy-noise'

$title-width: 470px
$title-height: 1.4 * $title-width

.title-page
  width: 100%
  min-height: 100%
  background: #f2f2f2
  .book
    width: $title-width
    margin: 0 auto
    padding: 10px 0
  .book-wrap
    position: relative
  .bottom
    position: absolute
    top: 11px
    left: 11px
    width: $title-width
    height: $title-height - 24px
    background: #fcfcfc
    border: 1px solid #cfcfcf
    +box-shadow(rgba(0, 0, 0, 0.2) 0 0 15px)
    z-index: 1
  .page
    position: absolute
    width: $title-width - 2px
  .page.odd
    background: white
  .page.even
    background: #e8e8e8
  @for $i from 1 through 12
    .page#{$i}
      left: #{$i}px
      top: #{$i + 2}px
      bottom: #{$i + 2}px
      z-index: #{14 - $i}
  .page1
    +box-shadow(rgba(0, 0, 0, 0.1) 15px 0 15px -15px inset)
  .back-side
    width: 100%
    height: $title-height - 2px
    position: absolute
    left: -100%
    background: #f8f8f8
    border: 1px solid #cfcfcf
    border-right-color: #e8e8e8
    +box-shadow(rgba(0, 0, 0, 0.1) 0 0 20px)
    z-index: 20
    display: none
    .paper
      position: absolute
      top: 2px
      right: -1px
      bottom: 2px
      left: 2px
      background: white
      +box-shadow(rgba(0, 0, 0, 0.1) -7px 0 7px -7px inset)
  .title
    width: 100%
    height: $title-height - 2px
    background: white
    +sassy-noise(0.1)
    position: relative
    border: 1px solid #cfcfcf
    z-index: 2
    +border-left-radius(4px)
    +box-shadow(rgba(0, 0, 0, 0.15) 6px 0 6px -6px inset)
    z-index: 20
    overflow: hidden
  .head
    position: absolute
    background: image-url("title/vessels-and-nerves.png")
    +image-size("title/vessels-and-nerves.png")
    top: 165px
    left: 50%
    margin-left: image-width("title/vessels-and-nerves.png") / -2
    +scale(0.86)
  h1
    position: absolute
    top: 15px
    left: 20px
    font-size: 46px
    font-family: Philosopher, serif
  p
    position: absolute
    top: 27px
    right: 0
    width: 230px
    font-size: 15px
    line-height: 1.2
    strong
      display: block
      font-weight: bold
  .open-badge
    display: block
    position: absolute
    left: 100%
    margin-left: -10px
    height: 30px
    line-height: 30px
    color: white
    text-shadow: rgba(0, 0, 0, 0.5) 0 1px 0
    text-decoration: none
    z-index: 14
    padding: 0 6px 0 32px
    &, .arrow
      background: #e3591a
      +transition(background, 200ms, linear)
    .crop-shadow
      position: absolute
      top: -12px
      right: 0
      bottom: -12px
      left: 0
      overflow: hidden
    .shadow
      position: absolute
      top: 12px
      right: 0
      bottom: 12px
      left: 22px
      +box-shadow(rgba(0, 0, 0, 0.3) 10px 0 12px)
    .crop-arrow
      position: absolute
      top: -12px
      left: 100%
      width: 25px
      height: 30px + 2 * 12px
      overflow: hidden
    .arrow
      position: absolute
      top: 12px + 4px
      left: -10px
      width: 22px
      height: 22px
      +rotate(45deg)
      +box-shadow(rgba(0, 0, 0, 0.3) 0 0 12px)
    .border
      position: absolute
      top: 1px
      right: 1px
      bottom: 1px
      left: 1px
      border: 1px solid lighten(#e3591a, 10%)
      +transition(border-color, 200ms)
      &.no-right
        right: 0
        border-right: none
    &:hover
      &, .arrow
        background: lighten(#e3591a, 6%)
      .border
        border-color: lighten(#e3591a, 16%)
    &:active
      &, .arrow
        +box-shadow(rgba(0, 0, 0, 0.4) 0 0 5px)
    &.new
      top: 160px

